log
Fri May  1 07:00:49 PM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
380367e
Fri May  1 07:15:42 PM UTC 2026: 
 tests:  4|7
total_score: 5/60
1d44dbc
Fri May  1 08:27:43 PM UTC 2026: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:67:50: error: expected ‘;’ before ‘:’ token
   67 |         if(key > aux->pair->key) aux = aux->right:
      |                                                  ^
      |                                                  ;
dde8f72
